fix: event parsing
