# pkg/apiclient/api/openapi.yaml
@@ -633,6 +633,11 @@ paths:
         required: true
         schema:
           type: string
+      - description: Force
+        in: query
+        name: force
+        schema:
+          type: boolean
       responses:
         "204":
           content: {}
@@ -651,6 +656,11 @@ paths:
         required: true
         schema:
           type: string
+      - description: Force
+        in: query
+        name: force
+        schema:
+          type: boolean
       responses:
         "204":
           content: {}
